--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "description": "A full stack LAMP & React shopping cart app.",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "build": "webpack --mode=production",
     "dev": "npm-run-all --silent --parallel dev:*",
@@ -38,11 +41,12 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-standard": "4.0.1",
+    "html-webpack-plugin": "5.6.4",
     "husky": "3.0.9",
     "lint-staged": "9.4.3",
     "npm-run-all": "4.1.5",
-    "webpack": "4.41.2",
-    "webpack-cli": "3.3.10",
+    "webpack": "5.101.3",
+    "webpack-cli": "5.1.4",
     "webpack-dev-server": "3.9.0"
   },
   "eslintIgnore": [
