--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "A full stack LAMP & React shopping cart app.",
-  "engines": {
-    "node": ">=18"
-  },
+  "engines": { "node": "20.x" },   
   "scripts": {
     "build": "webpack --mode=production",
     "dev": "npm-run-all --silent --parallel dev:*",
@@ -47,7 +45,7 @@
     "npm-run-all": "4.1.5",
     "webpack": "5.101.3",
     "webpack-cli": "5.1.4",
-    "webpack-dev-server": "3.9.0"
+    "webpack-dev-server": "^4.15.2"
   },
   "eslintIgnore": [
     "server/public/main.js"
